--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,3 +1,8 @@
 .Tilt {
     background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%);
 }
+
+.box {
+    object-fit: cover;
+    border-radius: 4px;
+}
